@@ -1,3 +1,7 @@
+Fri Mar 28 00:40:32 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gtkrelational.c: rearrange player details and stats view
+
 Thu Mar 27 22:37:01 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* po/gnubg.pot, non-src/credits.c, po/it.po: update italian
